--- a/index.html
+++ b/index.html
@@ -664,10 +664,13 @@
         <section id="social-media" class="social-section">
             <h2 class="section-title">تواصل معنا</h2>
             <div class="social-media">
-                <a href="https://www.instagram.com/zx6sq/" target="_blank"><i class="bi bi-instagram"></i></a>
-                <a href="https://wa.me/qr/YOSO75SYT5TFN1" target="_blank"><i class="bi bi-whatsapp"></i></a>
-                <a href="https://www.instagram.com/shop_ta1" target="_blank"><i class="bi bi-instagram"></i></a
-                <a href="https://www.instagram.com/AX" target="_blank"><i class="bi bi-yotube"></i></a
+                <a href="https://www.instagram.com/shop_ta1/"#><i class="fab fa-انستغرام"></i> instgrma</a>
+                <a href="https://www.youtube.com/@Axuuy/"#><i class="fab fa-"يوتيوب"></i> يوتيوب</a>
+                <a href="https://discord.gg/kcWMc7xq/"#><i class="fab fa-"دسكورد"></i> دسكورد</a>
+                <a href="https://www.instagram.com/zx6sq/"#><i class="fab fa-انستغرام"></i> instgrma</a>
+                <a href="https://wa.me/qr/YOSO75SYT5TFN1"#><i class="fab fa-"دس"></i>واتساب
+
+                
 
                 </div>
         </section>
@@ -936,3 +939,10 @@
     </script>
 </body>
 </html>
+
+link:javascript.js
+link:admin.html
+<link rel="admin.html"
+<link rel="java.js"
+<link rel="javascript.js"
+<link rel="jjj.json"
