--- a/index.html
+++ b/index.html
@@ -664,13 +664,13 @@
         <section id="social-media" class="social-section">
             <h2 class="section-title">تواصل معنا</h2>
             <div class="social-media">
-                <a href="https://www.instagram.com/shop_ta1/"#><i class="fab fa-انستغرام"></i> instgrma</a>
-                <a href="https://www.youtube.com/@Axuuy/"#><i class="fab fa-"يوتيوب"></i> يوتيوب</a>
-                <a href="https://discord.gg/kcWMc7xq/"#><i class="fab fa-"دسكورد"></i> دسكورد</a>
-                <a href="https://www.instagram.com/zx6sq/"#><i class="fab fa-انستغرام"></i> instgrma</a>
-                <a href="https://wa.me/qr/YOSO75SYT5TFN1"#><i class="fab fa-"دس"></i>واتساب
+                <a href="https://wa.me/qr/YOSO75SYT5TFN1"#><i class="fab fa-"واتساب"></i>واتساب
+                    <a href="https://www.instgram.com/shop_ta1/"#><i class="fab fa-انستغرام"></i> انستغرام</a>
+                    <a href="https://www.youtube.com/@Axuuy/"#><i class="fab fa-"يوتيوب"></i> يوتيوب</a> 
+                    <a href="https://www.instagram.com/zx6sq?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw=="#><i class="fab fa-انستغرام"></i> انستغرام</a> 
+                    <a href="https://discord.gg/kcWMc7xq"#><i class="fab fa-دسكورد"></i> دسكورد</a> 
 
-                
+
 
                 </div>
         </section>
